tests/success/multiple_lines_string_literal.tig
let
    var s := "Tiger allows string constants to \
             \span multiple lines by ending and \
             \starting each line with a backslash."
in
    print(s)
    print("\n")
end