tests/fail/comment_not_ended_after_program.tig
let
    var s := "Hello, world!\n"
in
    print(s)
end

/* This is a comment that begins here...
